Implemented automatic recording start/time when notes are played.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+.DS_Store
+
 # Package Files #
 *.jar
 *.war
@@ -23,5 +25,5 @@ hs_err_pid*
 
 .idea
 *.iml
-
+data/
 target/
