--- a/midi-archiver-core/pom.xml
+++ b/midi-archiver-core/pom.xml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.midiarchiver</groupId>
-  <artifactId>midi-archiver-core</artifactId>
-  <packaging>jar</packaging>
-
-  <name>midi-archiver-core</name>
-  <description>MIDI Archiver Core</description>
-
-  <parent>
     <groupId>org.midiarchiver</groupId>
-    <artifactId>midi-archiver-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../</relativePath>
-  </parent>
+    <artifactId>midi-archiver-core</artifactId>
+    <packaging>jar</packaging>
 
-  <dependencies>
-  </dependencies>
+    <name>midi-archiver-core</name>
+    <description>MIDI Archiver Core</description>
+
+    <parent>
+        <groupId>org.midiarchiver</groupId>
+        <artifactId>midi-archiver-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
