Change midi file save directory to use a uuid for the device id

--- a/midi-archiver-service/pom.xml
+++ b/midi-archiver-service/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.midiarchiver</groupId>
     <artifactId>midi-archiver-service</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>midi-archiver-service</name>
     <description>MIDI Archiver Service</description>
